[package]
name = "sekond"
version = "0.1.0"
authors = ["Michal Janočko <michal@janocko.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.15"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
