[package]
name = "sekond"
version = "0.1.0"
authors = ["Michal Janočko <michal@janocko.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
notify = "4.0.15"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
sass-rs = "0.2.2"
